"ActorServiceImpl tested and minnor fix in delete method"