@@ -1,14 +1,13 @@
 package com.sergiolillo.domain.services;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -18,6 +17,9 @@ import org.mockito.MockitoAnnotations;
 
 import com.sergiolillo.domain.contracts.repositories.ActoresRepository;
 import com.sergiolillo.domain.entities.Actor;
+import com.sergiolillo.exceptions.DuplicateKeyException;
+import com.sergiolillo.exceptions.InvalidDataException;
+import com.sergiolillo.exceptions.NotFoundException;
 
 public class ActorServiceImplTest {
 	
@@ -26,8 +28,6 @@ public class ActorServiceImplTest {
 	
     @InjectMocks
     private ActoresServiceImpl actorService;
-	
-	private Actor actor;
 	
     @BeforeEach
     public void setUp() {
@@ -41,17 +41,108 @@ public class ActorServiceImplTest {
 
         List<Actor> result = actorService.getAll();
 
-        // Verifico que el resultado no es nulo ni vacío
         assertNotNull(result);
         assertFalse(result.isEmpty());
-        assertEquals(2, result.size());
+        assertEquals(actors.size(), result.size());
         
-        //Verifico que los dos nombres son los esperados
-        assertEquals("JOHN", result.get(0).getFirstName());
-        assertEquals("JANE", result.get(1).getFirstName());
+        assertEquals(actors.getFirst().getFirstName(), result.get(0).getFirstName());
+        assertEquals(actors.getLast().getFirstName(), result.get(1).getFirstName());
 
-        // Verifico que el repositorio fue llamado una vez
         verify(repoActor).findAll();
+    }
+    
+    
+    @Test
+    public void testGetAllEmpty() {
+        when(repoActor.findAll()).thenReturn(List.of());
+
+        List<Actor> result = actorService.getAll();
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    public void testGetAllException() {
+        when(repoActor.findAll()).thenThrow(new RuntimeException("Database error"));
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> actorService.getAll());
+        assertEquals("Database error", exception.getMessage());
+    }
+
+    @Test
+    public void testGetOne() {
+        Actor actor = new Actor(1, "JOHN", "DOE");
+        when(repoActor.findById(1)).thenReturn(Optional.of(actor));
+
+        Optional<Actor> result = actorService.getOne(1);
+        assertTrue(result.isPresent());
+        assertEquals(actor, result.get());
+    }
+
+    @Test
+    public void testAddValidActor() throws DuplicateKeyException, InvalidDataException {
+        Actor actor = new Actor(0, "JOHN", "DOE");
+        when(repoActor.save(actor)).thenReturn(actor);
+
+        Actor result = actorService.add(actor);
+        assertEquals(actor, result);
+    }
+
+    @Test
+    public void testAddDuplicateActor() {
+        Actor actor = new Actor(1, "JOHN", "DOE");
+        when(repoActor.existsById(1)).thenReturn(true);
+
+        assertThrows(DuplicateKeyException.class, () -> actorService.add(actor));
+    }
+
+    @Test
+    public void testModifyValidActor() throws NotFoundException, InvalidDataException {
+        Actor actor = new Actor(1, "JOHN", "DOE");
+        when(repoActor.existsById(1)).thenReturn(true);
+        when(repoActor.save(actor)).thenReturn(actor);
+
+        Actor result = actorService.modify(actor);
+        assertEquals(actor, result);
+    }
+
+    @Test
+    public void testModifyNonExistentActor() {
+        Actor actor = new Actor(1, "JOHN", "DOE");
+        when(repoActor.existsById(1)).thenReturn(false);
+
+        assertThrows(NotFoundException.class, () -> actorService.modify(actor));
+    }
+
+    @Test
+    public void testDeleteValidActor() throws InvalidDataException {
+        Actor actor = new Actor(1, "JOHN", "DOE");
+        when(repoActor.findById(1)).thenReturn(Optional.of(actor));
+
+        actorService.delete(actor);
+        verify(repoActor).delete(actor);
+    }
+
+    @Test
+    public void testDeleteNonExistentActor() {
+        Actor actor = new Actor(1, "JOHN", "DOE");
+        when(repoActor.findById(1)).thenReturn(Optional.empty());
+
+        assertThrows(InvalidDataException.class, () -> actorService.delete(actor));
+    }
+
+    @Test
+    public void testDeleteByIdValid() throws NotFoundException {
+        when(repoActor.findById(1)).thenReturn(Optional.of(new Actor(1, "JOHN", "DOE")));
+
+        actorService.deleteById(1);
+        verify(repoActor).deleteById(1);
+    }
+
+    @Test
+    public void testDeleteByIdNonExistent() {
+        when(repoActor.findById(1)).thenReturn(Optional.empty());
+
+        assertThrows(NotFoundException.class, () -> actorService.deleteById(1));
     }
 	
 
